adde a route to add services to a booking and recalculate the price change column nams to match 'cent'
